refactor: search matching